# calculator_client_http

./: .gitignore  README.md  pyproject.toml
calculator_client/: TCP_client.py  __init__.py  calculate.py  cli.py  http_client.py
tests/: test_calculate.py  test_http_client.py
